<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="alert_not_found">לא נמצאו התראות</string>
    <string name="time_finished_teken">שעת סיום תקן</string>
    <string name="alarm_will_show_in">התראה תופיעה בשעה שנקבעה</string>
    <string name="set_time_teken">אנא בחר/י שעות תקן יומי</string>
    <string name="data_saved">הנתונים נשמרו במערכת</string>
    <string name="data_not_saved">השינוי בוטל</string>
    <string name="about">אודות</string>
    <string name="Close">סגור</string>
    <string name="Prepare_extra_hours">תכנון שעות נוספות להיום?</string>
    <string name="Confirm">אישור</string>
    <string name="Select_Pre_Alarm">בחר התראה מוקדמת בין 0"-"30 דקות</string>
    <string name="pre_alarm">התראה ראשונה </string>
    <string name="minutes_before_alarm"> דקות לפני סיום שעות התקן </string>
    <string name="select_alarm_ringtone">בחר צליל התראה</string>
    <string name="alarm_ringtone_saved">צליל התראה נשמר</string>
    <string name="all_personal_information_deleted">כל המידע וההגדרות נחמקו</string>
    <string name="alarm_was_set_to">התראה נקבעה לשעה: </string>
    <string name="Set_teken_time">הגדר שעות תקן</string>
    <string name="Set_pre_alarm">בחר תזמון התראה מוקדמת</string>
    <string name="show_alert_time">הצג שעת התראה</string>
    <string name="allow_extra_hours">אפשר שעות נוספות</string>
    <string name="delete_all_data">מחק הגדרות משתמש</string>
    <string name="delete_db_file">מחק מסד נתונים</string>
    <string name="Minutes">דקות</string>
</resources>